# regioes-vs-estados-vs-cidades

./: .gitignore  README.md  pyproject.toml
apps/core/: admin.py  urls.py
apps/core/api/: cidade_api.py  endpoints.py  estados_api.py  regiao_api.py  schemas.py
apps/core/management/commands/: create_data.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  cidade.py  estado.py  regiao.py
apps/core/templates/: index.html  index2.html
apps/core/views/: index.py
contrib/: env_gen.py
project/: api.py  settings.py  urls.py
static/js/: consumer.js  consumer2.js
